# grep

./: CMakeLists.txt  README.md
include/: grep.h
src/: grep.cpp  main.cpp
tests/: main.cpp  test_grep.cpp
